changed bg color

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	background-color: #083800;
+	background-color: #EEF;
 	background-image: url("images/background.jpg");
 	background-repeat: no-repeat;
 	width: 1260px;
